%% PawPal+ - Final UML (class diagram)

%% Class diagram showing classes, attributes, methods, and relationships
classDiagram
    class PetOwner {
        +name: string
        +years_experience: int
        +daily_hours: float
        +pets: List<Pet>
        +get_available_time(): float
        +add_pet(p: Pet): void
        +remove_pet(name: string): bool
        +get_all_tasks(incomplete_only: bool): List<Task>
    }

    class Pet {
        +name: string
        +speciesType: string
        +foodType: string
        +list_special_needs: List<string>
        +tasks: List<Task>
        +add_task(t: Task): void
        +remove_task(name: string): bool
        +list_tasks(incomplete_only: bool): List<Task>
    }

    class Task {
        +name: string
        +description: string
        +time_duration: float
        +frequency: string
        +completed: bool
        +time: datetime
        +last_completed: datetime
        +pet: Pet
        +time_duration_hours(): float
        +mark_complete(): void
        +mark_pending(): void
        +is_completed(): bool
        +is_due(reference: datetime): bool
        +to_dict(): Dict
    }

    class Scheduler {
        +owner: PetOwner
        +time_avail: float
        +sort_by_duration(tasks: List<Task>, descending: bool): List<Task>
        +sort_by_time(tasks: List<Task>, ascending: bool): List<Task>
        +get_filtered_tasks(pet_name: string, completed: bool, due_only: bool): List<Task>
        +priority_tasks(): List<Task>
        +schedule_tasks(): List<Task>
        +generate_plan(include_conflicts: bool): Dict
        +detect_conflicts(tasks: List<Task>): Dict
    }

    PetOwner "1" o-- "*" Pet : owns
    Pet "1" o-- "*" Task : has
    Task --> Pet : pet (optional)
    Scheduler --> PetOwner : uses
    Scheduler ..> Task : inspects/filters
    Task ..> Task : creates next occurrence
